--- a/index.html
+++ b/index.html
@@ -758,5 +758,27 @@
             }
         });
     </script>
+
+
+
+<!-- Default Statcounter code for education
+https://ebookclubglobal.glitch.me/edu.html -->
+<script type="text/javascript">
+var sc_project=13059212; 
+var sc_invisible=1; 
+var sc_security="99b6f803"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="https://c.statcounter.com/13059212/0/99b6f803/1/"
+alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
+
+
 </body>
 </html>
