--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
                 <p style="color: var(--text-muted); margin-bottom: 1.5rem;">
                     Agencies purchasing 3+ licenses receive volume discounts and extended payment terms.
                 </p>
-                <a href="mailto:sales@datapipepro.com" class="cta-button" style="display: inline-block;">
+                <a href="mailto: nlcgpt1@gmail.com" class="cta-button" style="display: inline-block;">
                     <i class="fas fa-envelope"></i> Contact Enterprise Sales
                 </a>
             </div>
