--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                     <p>• Complete Source Code Included</p>
                 </div>
 
-<a href="https://www.producthunt.com/products/datapipe-agency-pro/reviews/new?utm_source=badge-product_review&utm_medium=badge&utm_source=badge-datapipe&#0045;agency&#0045;pro" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/product_review.svg?product_id=1139377&theme=neutral" alt="DataPipe&#0032;Agency&#0032;Pro - DataPipe&#0058;&#0032;Automate&#0032;Your&#0032;Data&#0044;&#0032;Multiply&#0032;Your&#0032;Revenue&#0033; | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
+<a href="https://www.producthunt.com/products/datapipe-agency-pro?embed=true&amp;utm_source=badge-featured&amp;utm_medium=badge&amp;utm_campaign=badge-datapipe-agency-pro" target="_blank" rel="noopener noreferrer"><img alt="DataPipe Agency Pro - DataPipe: Automate Your Data, Multiply Your Revenue! | Product Hunt" width="250" height="54" src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=1051995&amp;theme=light&amp;t=1766131997890"></a>
 
 
             </div>
