--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
                 </div>
 
 
-
+<a href='https://www.saashub.com/datapipe-agency-pro?utm_source=badge&utm_campaign=badge&utm_content=datapipe-agency-pro&badge_variant=color&badge_kind=approved' target='_blank'><img src="https://cdn-b.saashub.com/img/badges/approved-color.png?v=1" alt="DataPipe Agency Pro badge" style="max-width: 150px;"/></a>
 
 
             </div>
