--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                     <div class="testimonial-content">
                         "From zero to $8K MRR in 60 days. We onboarded 7 clients in two months, 
                         each paying $1,200/month for automated reporting pipelines. 
-                        The ROI was immediate and transformative for our agency."
+                        The returns were immediate and transformative for our agency."
                     </div>
                     <div class="testimonial-author">
                         <div class="author-avatar">SR</div>
