--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="data pipeline, agency software, white-label, ETL, data integration, recurring revenue, data services, data automation">
     <meta name="author" content="DataPipe Agency Pro">
     <meta name="robots" content="index, follow, max-image-preview:large">
-    <link rel="canonical" href="https://eyedolise.github.io/datapipe/">
+    <link rel="canonical" href="https://eyedolise.github.io/datapipe">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
