--- a/index.html
+++ b/index.html
@@ -1006,9 +1006,9 @@
                         </div>
                         
                         <div class="text-center">
-                            <button type="submit" class="btn btn-large" style="width: 100%;">
-                                <i class="fas fa-paper-plane"></i> Send Message
-                            </button>
+                     <button type="submit" class="cta-button" style="width: 100%; text-align: center; display: block;">
+    <i class="fas fa-paper-plane"></i> Send Message
+</button>
                         </div>
                     </form>
                 </div>
